--- a/languages/fr-FR.json
+++ b/languages/fr-FR.json
@@ -15,7 +15,7 @@
       "loginTitle": "Budget | Connexion !",
       "RegistrationTitle": "Budget | Inscription !",
       "addAccountTitle": "Ajouter un compte",
-      "profile": "profile"
+      "profile": "profil"
     },
     "placeholder":{
       "budgetName":"Nom du budget:",
