--- a/languages/en-EN.json
+++ b/languages/en-EN.json
@@ -52,7 +52,7 @@
     "settings":"settings"
   },
   "dashboardLabel": {
-    "revenue": "Revenue",
+    "revenue": "Revenues",
     "account" :"account",
     "totalBudget": "Total budget"
   }
